# my_algo_trading

./: pyproject.toml  requirements_new.txt  scraper.py
starter_files/: 001_equal_weight_S&P_500.ipynb  sp500.csv
