[project]
name = "algorithmic-trading-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-client>=6.1.3",
    "jupyter>=1.0.0",
    "jupyter-console>=6.1.0",
    "jupyter-core>=4.6.3",
    "numpy>=1.17.4",
    "pandas>=0.25.3",
    "requests>=2.22.0",
    "scipy>=1.5.2",
    "xlsxwriter>=1.2.2",
    "yfinance>=0.2.51",
]
